some changes made

--- a/views/user/order.ejs
+++ b/views/user/order.ejs
@@ -5,7 +5,7 @@
       <%- include('../partials/user/sidebar.ejs') %>
         <div class="col-lg-8">
           <div class="d-flex flex-column">
-            <% orderProducts.forEach(item => { %>
+            <% orderProducts.forEach(item=> { %>
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -19,52 +19,66 @@
                               %></span></span></p>
                       <p class="card-text"><span class="fw-bold">Quantity: <span class="text-muted"><%- item.quantity
                               %></span></span></p>
-                       <p class="card-text"><span class="fw-bold">itemTotal: <span class="text-muted"><%-totalPrice
-                        %></span></span></p>
-                              %>
-                          </span></span></p>
+                      <p class="card-text"><span class="fw-bold">Item Total: <span class="text-muted"><%- item.price *
+                              item.quantity %></span></span></p>
                       <p class="card-text"><small class="text-body-secondary">Last updated <%-
                             orderDetails.updatedAt.toDateString() %></small></p>
                       <p class="card-text"><small class="text-body-secondary fs-2"><span class="badge bg-success"><%-
                               item.status %></span></small></p>
                     </div>
-                    <div class="d-grid gap-2 flex-row mx-auto">
-                      <!-- Cancel Order button -->
-                      <% if (item.status !== 'Cancelled' && item.status !== 'Delivered') { %>
-                        <button type="button" class="btn btn-outline-danger"
-                          onclick="cancelOrder('<%- orderDetails._id %>', '<%- item.product_id._id %>')">Cancel Order</button>
-                      <% } else if (item.status === 'Cancelled') { %>
-                        <p class="text-danger">Cancelled on <%= item.cancelled_on %></p>
-                      <% } %>
-                      
-                      <!-- Show Return Order button if not in return, status is not Confirmed, not Approved, and not Cancelled -->
-                      <% if (!item.return && !item.inReturn && item.status !== 'Confirmed' && item.status !== 'Approved' && item.status !== 'Cancelled') { %>
-                        <button type="button" data-order-id="<%- orderDetails._id %>" data-product-id="<%- item.product_id._id %>" data-bs-toggle="modal" data-bs-target="#returnOrderModal" class="btn col btn-outline-warning">Return Order</button>
-                      <% } else if (item.inReturn) { %>
-                        <!-- Return Status -->
-                        <input role="button" readonly type="none" class="text-center btn bg-secondary text-warning py-2 px-2" value="Return: <%= item.status %>">
-                      <% } %>
-                      
-                      <!-- Download Invoice Button -->
-                      <% if (item.status === 'Delivered') { %>
-                        <button id="invoice" data-order-id="<%- orderDetails._id %>" data-product-id="<%- item.product_id._id %>" data-bs-toggle="modal" data-bs-target="#invoiceModal" type="button" class="btn col btn-outline-primary">Download Invoice</button>
-                      <% } %>
+                    <div class="card-body px-3 m-2 border">
+                      <div class="row justify-content-center gap-3 mx-2">
+                        <!-- Cancel Order button -->
+                        <% if (item.status !== 'Cancelled' && item.status !== 'Delivered' && item.status !== 'Return requested' && item.status !== 'Returned') { %>
+                          <button
+                            onclick="cancelOrder('<%- orderDetails._id %>', '<%- item.product_id._id %>', '<%- item.variant %>')"
+                            type="button" class="btn col btn-outline-danger">Cancel Order</button>
+                        <% } else if (item.status === 'Cancelled') { %>
+                          <p class="text-danger">Cancelled on <%= item.cancelled_on %></p>
+                        <% } %>
+                    
+                        <!-- Show Return Order button if not in return and status is not Confirmed, Approved, Cancelled, Return requested, or Returned -->
+                        <% if (!item.return && !item.inReturn && item.status !== 'Confirmed' && item.status !== 'Approved' && item.status !== 'Cancelled' && item.status !== 'Return requested' && item.status !== 'Returned') { %>
+                          <button type="button" data-order-id="<%- orderDetails._id %>"
+                            data-item-id="<%- item._id %>" data-variant="<%- item.variant %>"
+                            data-product-id="<%- item.product_id._id %>" data-bs-toggle="modal"
+                            data-bs-target="#returnOrderModal" class="btn col btn-outline-warning">Return Order</button>
+                        <% } %>
+                    
+                        <!-- Show Return Status if in return or return requested -->
+                        <% if (item.inReturn || item.status === 'Return requested') { %>
+                          <input role="button" readonly type="none"
+                            class="text-center btn text-warning py-2 px-2"
+                            value="Return: <%= item.status %>">
+                        <% } %>
+                    
+                        <!-- Show "Returned Successfully" button if the status is "Returned" -->
+                        <% if (item.status === 'Returned') { %>
+                          <button class="btn btn-success">Returned Successfully</button>
+                        <% } %>
+                    
+                        <!-- Download Invoice Button -->
+                        <% if (item.status === 'Delivered') { %>
+                          <button id="invoice" data-order-id="<%- orderDetails._id %>"
+                            data-item-id="<%- item._id %>"
+                            data-product-id="<%- item.product_id._id %>" data-bs-toggle="modal"
+                            data-bs-target="#invoiceModal" type="button"
+                            class="btn col btn-outline-primary">Download Invoice</button>
+                        <% } %>
+                      </div>
                     </div>
                     
-                    
-                    
-                    
-
                   </div>
                 </div>
               </div>
-            <% }) %>
+              <% }) %>
           </div>
         </div>
     </div>
   </div>
 </section>
-  <!-- Return Order -->
+
+<!-- Return Order Modal -->
 <div class="modal fade" id="returnOrderModal" tabindex="-1" aria-labelledby="returnOrderLabel">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -75,7 +89,6 @@
       <div class="modal-body">
         <div class="card">
           <form id="return_form" class="card-body px-3 py-2 row">
-
             <div class="col-md-12">
               <input class="form-control" type="hidden" id="order_id" name="order_id">
               <input class="form-control" type="hidden" id="product_id" name="product_id">
@@ -100,7 +113,7 @@
             </div>
             <div class="card-footer">
               <input type="submit" class="btn btn-primary" value="Send Return Request">
-              <input type="reset" class="btn btn-outline-warning" value="clear">
+              <input type="reset" class="btn btn-outline-warning" value="Clear">
             </div>
           </form>
         </div>
@@ -162,25 +175,25 @@
   }
 
   const returnOrderModal = document.getElementById('returnOrderModal')
-  
-  
-  
+
+
+
   returnOrderModal.addEventListener('show.bs.modal', async (e) => {
     const returnOrderBtn = e.relatedTarget;
 
     const orderId = returnOrderBtn.getAttribute('data-order-id')
     const productId = returnOrderBtn.getAttribute('data-product-id')
     const itemId = returnOrderBtn.getAttribute('data-item-id')
-    
+
     const order_id = document.getElementById('order_id')
     const product_id = document.getElementById('product_id')
     const item_id = document.getElementById('item_id')
-   
+
 
     order_id.value = orderId
     product_id.value = productId
     item_id.value = itemId
-   
+
   });
 
   const return_form = document.getElementById('return_form')
@@ -252,12 +265,12 @@
       console.log(body);
 
       await fetch('/user/return-order', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(body)
-        }).then(response => response.json())
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(body)
+      }).then(response => response.json())
         .then(data => {
           if (data.success) {
             Swal.fire({
@@ -276,7 +289,7 @@
   })
 
   const invoice = document.getElementById('invoice')
-  
+
   invoice.addEventListener('click', async (e) => {
     const orderId = e.currentTarget.getAttribute('data-order-id')
     const itemId = e.currentTarget.getAttribute('data-item-id')
