--- a/views/user/invoice-pdf.ejs
+++ b/views/user/invoice-pdf.ejs
@@ -77,7 +77,7 @@
                       </td>
                       <td>₹<%- item.price %></td>
                       <td><%- item.quantity %></td>
-                      <td class="text-end">₹ <%- totalPrice %></td>
+                      <td class="text-end">₹<%- item.price*item.quantity %> </td>
                     </tr>
                     <!-- end tr -->
                     <!-- <tr>
@@ -95,7 +95,7 @@
                     <!-- end tr -->
                     <tr>
                       <th scope="row" colspan="4" class="text-end">Sub Total</th>
-                      <td class="text-end">₹<%- totalPrice %></td>
+                      <td class="text-end">₹<%- item.price*item.quantity %></td>
                     </tr>
                     <!-- end tr -->
                     <tr>
@@ -119,7 +119,8 @@
                     <tr>
                       <th scope="row" colspan="4" class="border-0 text-end">Total</th>
                       <td class="border-0 text-end">
-                        <h4 class="m-0 fw-semibold">₹<%- totalPrice %></h4>
+                        <h4 class="m-0 fw-semibold">₹ <%- item.price *
+                          item.quantity %></h4>
                       </td>
                     </tr>
                     <!-- end tr -->
