--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -1,62 +1,66 @@
 <div class="page-wrapper">
-<header class="header">
-    <div class="header-bottom sticky-header">
-        <div class="container">
-            <div class="header-left">
-                <button class="mobile-menu-toggler">
-                    <span class="sr-only">Toggle mobile menu</span>
-                    <i class="icon-bars"></i>
-                </button>
-                
-                <a href="/" class="logo">
-                    <h1 class="text-success display-6">Ministore</h1>
-                </a>
-            </div>
-            <div class="header-center">
-                <nav class="main-nav">
-                    <ul class="menu sf-arrows">
-                        <li class="megamenu-container active">
-                            <a href="/" class="sf-with-ul">Home</a>
-
-                                </li>
-
-                                <li>
-                                    
-                            <a href="/search" class="sf-with-ul">Shop</a>
-
-                            <div class="megamenu megamenu-md">
-                            </div>
+    <header class="header">
+        <div class="header-bottom sticky-header">
+            <div class="container">
+                <div class="header-left" style="width: 200px;"> <!-- Set fixed width -->
+                    <button class="mobile-menu-toggler">
+                        <span class="sr-only">Toggle mobile menu</span>
+                        <i class="icon-bars"></i>
+                    </button>
+                    <a href="/" class="logo">
+                        <h1 class="text-success display-6" style="font-size: 24px;">Ministore</h1> <!-- Fixed font size -->
+                    </a>
+                </div>
+                <div class="header-center" style="flex: 1;"> <!-- Allow flexible width -->
+                    <nav class="main-nav">
+                        <ul class="menu sf-arrows">
+                            <li class="megamenu-container active">
+                                <a href="/" class="sf-with-ul">Home</a>
                             </li>
-                                <li>
-                                    <a href="/about" class="sf-with-ul">About</a>
-
-                                </li>
-                                <li>
-                                    <a href="/contact" class="sf-with-ul">Contact</a>
-
-                                    
-                                </li>
-                               
-                    </ul><!-- End .menu -->
-                </nav><!-- End .main-nav -->
-            </div><!-- End .header-left -->
-
-            <div class="nav-item navbar-icon-link">
-                    <a class="nav-link"  href="/logout" style="color: black; position: relative; left: -20px;">Sign out</a>
-                </li>
-            </div>
+                            <li>
+                                <a href="/search" class="sf-with-ul">Shop</a>
+                                <div class="megamenu megamenu-md">
+                                </div>
+                            </li>
+                            <li>
+                                <a href="/about" class="sf-with-ul">About</a>
+                            </li>
+                            <li>
+                                <a href="/contact" class="sf-with-ul">Contact</a>
+                            </li>
+                        </ul><!-- End .menu -->
+                    </nav><!-- End .main-nav -->
+                </div><!-- End .header-center -->
+                
             
-             <!-- User Not Logged - link to login page-->
+          
+
+
+
+
+                <div class="header-right" style="width: 300px;"> <!-- Set fixed width -->
+                    <div class="header-search" style="margin-right: 10px;"> <!-- Add margin -->
+                        <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
+                        <form action="/search/" method="get" style="width: 200px;"> <!-- Set fixed width -->
+                            <div class="header-search-wrapper">
+                                <label for="q" class="sr-only">Search</label>
+                                <input type="search" class="form-control" name="search" id="search" placeholder="Search in..." required style="width: 150px;"> <!-- Set fixed width -->
+                            </div><!-- End .header-search-wrapper -->
+                        </form>
+                    </div><!-- End .header-search -->
+
+                       <!-- User Not Logged - link to login page-->
           <% if (typeof user !=='undefined') { %>
             <% if (user) { %>
-            <div class="nav-item navbar-icon-link">
-              <a href="/user/profile" class="navbar-icon-link">
-                <i class="bi bi-person" style="width: 450;color: black;"></i>
-                <span class="text-sm ms-2 ms-lg-0 text-uppercase text-sm fw-bold d-none d-sm-inline d-lg-none">
-                  Account
-                </span>
-              </a>
-            </div>
+                <div class="nav-item navbar-icon-link">
+                    <a href="/user/profile" class="navbar-icon-link">
+                        <i class="bi bi-person" style="font-size: 2.5rem; color: black;"></i> <!-- Adjust the font size as needed -->
+                        <span class="text-sm ms-2 ms-lg-0 text-uppercase text-sm fw-bold d-none d-sm-inline d-lg-none">
+                            Account
+                        </span>
+                    </a>
+                </div>
+                
             <% } %>
             <% } else { %>
             <div class="nav-item navbar-icon-link m-0">
@@ -77,43 +81,29 @@
             </div>
             <% } %>
 
-            
-            <div class="header-right">
-                <div class="header-search">
-                    <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
-                    <form action="/search/" method="get" >
-                        <div class="header-search-wrapper">
-                            <label for="q" class="sr-only">Search</label>
-                            <input type="search" class="form-control" name="search" id="search" placeholder="Search in..." required>
-                        </div><!-- End .header-search-wrapper -->
-                    </form>
-                </div><!-- End .header-search -->
-
-                <a href="/user/wishlist" class="wishlist-link">
-                    <i class="icon-heart-o"></i>
-                    <!-- <span class="wishlist-count">3</span> -->
-                </a>
-
-                <div class="dropdown cart-dropdown">
-                    <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
-                        <i class="icon-shopping-cart"></i>
+                    <a href="/user/wishlist" class="wishlist-link" style="margin-right: 10px;"> <!-- Add margin -->
+                        <i class="icon-heart-o"></i>
                     </a>
 
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <div class="dropdown-cart-products">
-                            <div class="product">
-
-
-                        <div class="dropdown-cart-action">
-                            <a href="/user/cart" class="btn btn-primary">View Cart</a>
-                            <a href="/user/checkout" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a>
-                        </div><!-- End .dropdown-cart-total -->
-                    </div><!-- End .dropdown-menu -->
-                </div><!-- End .cart-dropdown -->
-            </div><!-- End .header-right -->
-        </div><!-- End .container -->
-    </div><!-- End .header-bottom -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-</header> 
-<!-- End .header -->
+                    <div class="dropdown cart-dropdown">
+                        <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static" style="margin-right: 10px;"> <!-- Add margin -->
+                            <i class="icon-shopping-cart"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" style="width: 300px;"> <!-- Set fixed width -->
+                            <div class="dropdown-cart-products" style="max-height: 300px; overflow-y: auto;"> <!-- Limit height and add scroll -->
+                                <div class="product">
+                                    <!-- Cart products here -->
+                                </div>
+                            </div><!-- End .dropdown-cart-products -->
+                            <div class="dropdown-cart-action">
+                                <a href="/user/cart" class="btn btn-primary" style="width: 140px;">View Cart</a> <!-- Set fixed width -->
+                                <a href="/user/checkout" class="btn btn-outline-primary-2" style="width: 140px;"><span>Checkout</span><i class="icon-long-arrow-right"></i></a> <!-- Set fixed width -->
+                            </div><!-- End .dropdown-cart-action -->
+                        </div><!-- End .dropdown-menu -->
+                    </div><!-- End .cart-dropdown -->
+                </div><!-- End .header-right -->
+            </div><!-- End .container -->
+        </div><!-- End .header-bottom -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </header> <!-- End .header -->
+</div><!-- End .page-wrapper -->
