--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -42,73 +42,40 @@
                 </thead>
                 <tbody>
                   <% userCart.items.forEach((item)=> { %>
-                  <tr>
-                    <td>
-                      <div class="d-flex align-items-center">
-                        <img
-                          class="cart-item-img img-fluid img-thumbnail"
-                          style="width: 7rem"
-                          src="/uploads/cropped/<%= item.product_id.images.image1 %>"
-                          alt="..."
-                        />
-                        <div class="cart-title text-start">
-                          <a class="text-uppercase text-dark"
-                            ><strong>
-                              <%= item.product_id.product_name %>
-                            </strong></a
-                          >
-                        </div>
-                      </div>
-                    </td>
-                    <td class="align-middle">
-                      ₹<%= item.product_id.sellingPrice %>
-                    </td>
-  
-                    <td class="align-middle">
-                      <div class="d-flex flex-row">
-                        <button
-                          onclick="updateQuantity('<%- item.product_id._id %>', 'false')"
-                          class="btn btn-link px-2"
-                          type="button"
-                        >
-                          <i class="fas fa-minus fa-sm"></i>
-                        </button>
-  
-                        <input
-                          id="quantity-input-<%- item.product_id._id %>"
-                          min="0"
-                          name="quantity"
-                          value="<%-item.quantity %>"
-                          type="number"
-                          style="width: 65px"
-                          readonly
-                        />
-  
-                        <button
-                          onclick="updateQuantity('<%- item.product_id._id %>', 'true')"
-                          class="btn btn-link px-2"
-                          type="button"
-                        >
-                          <i class="fas fa-plus fa-sm"></i>
-                        </button>
-                      </div>
-                    </td>
-  
-                    <td
-                      class="align-middle"
-                      id="itemTotal-<%- item.product_id._id %>"
-                    >
-                      ₹<%= item.itemTotal %>
-                    </td>
-                    <td class="align-middle">
-                      <button
-                        onclick="removeFromCart('<%- item.product_id._id %>')"
-                        class="btn btn-light cart-remove"
-                      >
-                        <i class="delete bi bi-x-lg text-danger"></i>
-                      </button>
-                    </td>
+                    <tr>
+                      <td>
+                          <div class="d-flex align-items-center">
+                              <% if (item.product_id.onOffer) { %>
+                                  <div class="ribbon ribbon-info">On offer <%= item.product_id.offerDiscountRate %>%</div>
+                              <% } %>
+                              <img class="cart-item-img img-fluid img-thumbnail" style="width: 7rem" src="/uploads/cropped/<%= item.product_id.images.image1 %>" alt="...">
+                              <div class="cart-title text-start">
+                                  <a class="text-uppercase text-dark"><strong><%= item.product_id.product_name %></strong></a>
+                              </div>
+                          </div>
+                      </td>
+                      <td class="align-middle">₹<%= item.product_id.sellingPrice %></td>
+                  
+                      <td class="align-middle">
+                          <div class="d-flex flex-row">
+                              <button onclick="updateQuantity('<%- item.product_id._id %>', 'false')" class="btn btn-link px-2" type="button">
+                                  <i class="fas fa-minus fa-sm"></i>
+                              </button>
+                              <input id="quantity-input-<%- item.product_id._id %>" min="0" name="quantity" value="<%-item.quantity %>" type="number" style="width: 65px" readonly />
+                              <button onclick="updateQuantity('<%- item.product_id._id %>', 'true')" class="btn btn-link px-2" type="button">
+                                  <i class="fas fa-plus fa-sm"></i>
+                              </button>
+                          </div>
+                      </td>
+                  
+                      <td class="align-middle" id="itemTotal-<%- item.product_id._id %>">₹<%= item.itemTotal %></td>
+                      <td class="align-middle">
+                          <button onclick="removeFromCart('<%- item.product_id._id %>')" class="btn btn-light cart-remove">
+                              <i class="delete bi bi-x-lg text-danger"></i>
+                          </button>
+                      </td>
                   </tr>
+                  
                   <% }) %>
                 </tbody>
               </table>
